TMS Manual Launches, Test case executions, Milestones + another fixes